Fixed dialog layout problems

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -246,3 +246,7 @@ ul.latest-news {
 .ui-autocomplete {
     z-index: 5000 !important;
 }
+
+.ui-dialog-titlebar {
+    height: inherit !important;
+}
